# level2-3-recsys-finalproject-recsys-01

./: .gitignore  README.md  README.xxx  clean.sh  crawl_recipe.py  crawl_review.py  crawl_reviewer.py  main.py  mongo_test.py  packagelist.txt  requirements.txt  split.py
backend/: CHANGELOG.md  conftest.py  pyproject.toml
backend/app/: app.py
backend/app/api/routes/recipes/controller/: recipes_controller.py
backend/app/api/routes/recipes/dto/: get_recipes_reponse.py  get_recipes_reponse_list.py  (+1 more)
backend/app/database/: data_source.py  dev.env  prod.env
backend/app/exception/database/: database_exception.py
backend/app/exception/users/: signup_exeption.py  user_exception.py
backend/app/utils/: pyobject_id.py
backend/tests/: assert_not_raises.py
backend/tests/api/routes/recipes/: test_recipes.py
backend/tests/api/routes/users/: test_users.py
backend/tests/database/: test_database.py
crawling/: clean_na.py  crawl_price.py  crawl_price_db.py  crawl_ranked_recipes.py  crawl_recipe.py  crawl_recipe_data.py  crawl_review.py  crawl_reviewer.py  crawl_reviewer_split.py  crawl_userid_split.py  crawl_utils.py  merge_results.py  preprocess.py  pyproject.toml
crawling/database/: data_source.py  dev.env
crawling/exception/: database.py
frontend/: Home.py  app.py  basket_login.py  basket_signup.py  common.py  main.py  main_2.py  newapp.py  pages.py  pyproject.toml  recommendation.py  recommendation_history.py  requirements.txt  result_page.py  signinpage_2.py  user_history.py  utils.py  홈_🏠.py
frontend/pages/: 2_장바구니_추천받기_💘.py  3_AI가_선정한_취향저격_레시피_🤖.py  4_내가_요리한_레시피_🥘.py  RecommendationHistoryPage.py  RecommendationPage.py  ResultPage1.py  ResultPage2.py  UserHistoryPage.py  recommendation.py  recommendation_history.py  user_history.py  장바구니_추천받기_💘.py
(+52 files in other folders)
